force-app/main/default/objects/Retail_Request_Replacement__c/Retail_Request_Replacement__c.object-meta.xml
<CustomObject>
    <label>Retail Request Replacement</label>
    <nameField>
        <displayFormat>RRR-{0000}</displayFormat>
        <label>Retail Request Replacement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Request Replacement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>