force-app/main/default/objects/Retail_Request_Replacement__c/fields/Add_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Add Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Request Replacement</relationshipLabel>
    <relationshipName>Retail_Request_Replacement</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>