force-app/main/default/objects/Retail_Request_Replacement__c/fields/Add_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Add_Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Add Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Request Replacement</relationshipLabel>
    <relationshipName>Retail_Request_Replacement</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>