force-app/main/default/objects/Retail_Request_Replacement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending replacement approval</fullName>
            </value>
            <value>
                <fullName>replacement approved</fullName>
            </value>
            <value>
                <fullName>replacement provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>