force-app/main/default/objects/Retail_Request_Replacement__c/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <label>Total Qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>